隐藏聊天页，先展示登陆页

--- a/lwxchat/src/main/resources/static/vindex.html
+++ b/lwxchat/src/main/resources/static/vindex.html
@@ -91,7 +91,7 @@
     var v = new Vue({
         el: '#app',
         data : {
-            msgShowFlag : true,
+            msgShowFlag : false,
             count : [
                 {
                     name : '张三'
